--- a/components/excess-meerkat-java-quarkus/overlays/stage/deployment-patch.yaml
+++ b/components/excess-meerkat-java-quarkus/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap_qe/rhtap-qe:606a449f2f0a9d28f44e60eddbcf32288e2032a4@sha256:926c8be06390417639fb70826edab7c40d8face7771ccb247dfb97ac845373e9
         name: container-image  
